# MAV_DROP_RECOVERY

./: CMakeLists.txt  Link to R210-181217-0002_ASL.yaml  ROS Manipulation  package.xml
include/mav_drop_recovery/: planner.h
launch/: trajectory.launch
paths/: param.yaml
src/: GUITrajectoryPlanner.py  planner.cc  planner_node.cc
srv/: SetTargetPosition.srv
